# CUTEMONITOR

./: .gitignore  AGENTS.md  Cargo.toml  LoadLibreHardware.txt  README.md  TempMonitor.cs  TempMonitor.csproj  build.rs  debug.txt  nonzero.txt  resource.rc
gpu_perf_api_ffi/: Cargo.toml
gpu_perf_api_ffi/src/: lib.rs  test_loading.rs  types.rs
src/: amd_gpu_monitor.rs  amd_version_detector.rs  bandwidth.rs  canvas.rs  core_thread_data.rs  cpu_temp_monitor.rs  data_colouring.rs  dating_function.rs  dotnet_runtime.rs  embedded_dlls.rs  gpu_assets.rs  gpu_data.rs  gpu_data_amd.rs  gpu_data_collect.rs  gpu_data_nvidia.rs  gpu_data_virtual.rs  gpu_gui.rs  gpu_hardware_checker.rs  gpu_interrogate.rs  gpu_monitor_manager.rs  hardware_checker.rs  interface_stats.rs  launch_gpu_detect.rs  main.rs  main_old.rs  state.rs  styles.rs  subscriptions.rs  user_process_fetch.rs  user_thread_collect.rs  utils.rs  what_cpu_check.rs
