[package]
name = "cutemonitor"
version = "0.2.1"
edition = "2021"

[build-dependencies]
embed-resource = "2.4"
usvg = "0.23"
tiny-skia = "0.6"
resvg = "0.23"
ico = "0.1"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.12", features = ["advanced", "canvas", "image", "tokio"] }
sysinfo = "0.37.2"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.52", features = ["Win32_System_Registry", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Security", "Win32_System_Console"] }
regex = "1"
gfxinfo = "0.1.2"
machine-info = "1.0.9"