[package]
name = "cutemonitor"
version = "0.3.1"
edition = "2021"

[build-dependencies]
winresource = "0.1"

[dependencies]
iced = { version = "=0.13.1", features = ["advanced", "image", "canvas", "tokio"] }  # Locked to v0.13.1 to prevent regressions
iced_futures = "=0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Security", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Registry"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
machine-info = "1.0.9"
ico = "0.3"


