[workspace]
members = [".", "gpu_perf_api_ffi"]

[package]
name = "cutemonitor"
version = "0.3.7"
edition = "2021"

[build-dependencies]
winresource = "0.1"

[dependencies]
iced = { version = "=0.13.1", features = ["advanced", "image", "canvas", "tokio"] }  # Locked to v0.13.1 to prevent regressions
iced_futures = "=0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Security", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Registry", "Win32_System_SystemInformation", "Win32_Storage_FileSystem", "Win32_System_Performance"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
ico = "0.3"
lazy_static = "1.4"
anyhow = "1.0"
log = "0.4"

nvml-wrapper = "0.8"
vm-detect = "0.1"
gpu_perf_api_ffi = { path = "gpu_perf_api_ffi", optional = true }

[features]
default = ["amd"]
amd = ["gpu_perf_api_ffi"]


