[package]
name = "gpu_perf_api_ffi"
version = "0.1.0"
edition = "2021"
description = "Safe Rust FFI bindings for AMD GPUPerfAPI with dual-version support"
license = "MIT"

[dependencies]
libloading = "0.8"
thiserror = "1.0"
log = "0.4"

[features]
default = ["dual-version"]
dual-version = []
v3_17-only = []
v4_1-only = []